# WaterPaths

./: .gitignore  .ssh-standard-config  CMakeLists.txt  DV_Objective_Documentation.xlsx  Dockerfile  JLWTPModel_bootstrappingComparisons.R  JLWTPModel_bootstrappingFileDevelopment.R  JLWTPModel_buildParameterInputFileForSensitivityAnalysis.R  JLWTPModel_plotReevalComparison.R  JLWTPModel_plotResults.R  JLWTPModel_plotResults_FigureA.R  JLWTPModel_plotResults_FigureB.R  JLWTPModel_plotResults_FigureC.R  JLWTPModel_plotResults_FigureD.R  JLWTPModel_plotResults_FigureE.R  JLWTPModel_plotResults_FigureF.R  JLWTPModel_plotResults_FigureG.R  JLWTPModel_plotResults_FigureH.R  JLWTPModel_readBorgOutput.R  JLWTPModel_supplement_seedAnalysis.R  JLWTP_compare_ROFs_simple.py  Makefile  Pittsboro_CC_DemandClassStats.xlsx  README.md  SingTemplate  bash_rc  borg-standard-builder.sh  borgProblemDefinition.h  borgTriangleProblemDefinition.h  borg_mpi_valgrind.sh  borg_run_paper3_loop.sh  borg_test_run_paper3.sh  borg_test_run_paper3_loop.sh  borgms_hybrid_openmp_mpi.sh  build-docker.sh  build-singularity.sh  combined_reference_sets.set  continuity_check.py  diagnostic_compare_ROF_calculation_types.py  docker-compose.sh  (+59 more)
Borg/: borgTriangleProblemDefinition.h
ContainerFiles/: .nix_versions  alpine_envs.sh  alpine_install_cmds.sh  default.nix.sh  default.sh  dev-env.nix  entrypoint  entrypoint-nixuser  env_backup.drv  generate-keys.sh  ubuntu_envs.sh  ubuntu_install_cmds.sh
Model/: Aux.cpp  Aux.h  Catchment.cpp  Catchment.h  Constants.h  ContinuityModel.cpp  ContinuityModel.h  Region.cpp  Region.h  Reservoir.cpp  Reservoir.h  Utility.cpp  Utility.h  main.cpp
Model/WaterSources/: Reservoir.cpp  Reservoir.h  WaterSource.h
Problems/: Problem.cpp  U3R5.cpp
Problems/HeaderFiles/: Problem.h  U3R5.h
TestFiles/: .plot_demands_inflow.py.swo  ContinuityTest.ods  Objectives.out  PFCObjective.xlsx  Pathways.out  Policies.out  Reservoirs.out  Utilities.out  WCCObjective.xlsx  WJLWTP_rdm_policies.csv  WJLWTP_rdm_policies_NaNtest.csv  WJLWTP_rdm_utilities.csv  WJLWTP_rdm_utilities_NaNtest.csv  WJLWTP_rdm_watersources.csv  WJLWTP_rdm_watersources_NaNtest.csv  WaterSources.out  calculate_water_prices.py  caneInflowsLong.csv  caryDemandClassesFractions.csv  caryRestrictionMultipliers.csv  carySewageFraction.csv  carySewageTreatmentPrice.csv  caryUserClassesWaterPrices.csv  catch-main.h  chathamDemandClassesFractions.csv  chathamPriceRestMultipliers.csv  chathamPriceSurcharge.csv  chathamSewageFraction.csv  chathamSewageTreatmentPrice.csv  chathamUserClassesWaterPrices.csv  claytonInflowsLong.csv  crabtreeInflowsLong.csv  demand_to_wastewater_fraction_chatham.csv  demand_to_wastewater_fraction_durham.csv  demand_to_wastewater_fraction_owasa_raleigh.csv  demands.csv  demandsLong.csv  demandsLongCary.csv  demandsLongDurham.csv  demandsLongOWASA.csv  (+61 more)
TestFiles/demands/: cary_annual_demand_projections.csv  cary_demand.csv  cary_demands_scenario_as_projected.csv  chatham_annual_demand_projections.csv  chatham_demands_scenario_as_projected.csv  durham_annual_demand_projections.csv  durham_demand.csv  durham_demands_scenario_as_projected.csv  owasa_annual_demand_projections.csv  owasa_demand.csv  owasa_demands_scenario_as_projected.csv  pittsboro_annual_demand_projections.csv  pittsboro_demands_scenario_as_projected.csv  raleigh_annual_demand_projections.csv  raleigh_demand.csv  raleigh_demands_scenario_as_projected.csv
TestFiles/demands_few_records/: cary_demand_few_records.csv  durham_demand_few_records.csv  owasa_demand_few_records.csv  raleigh_demand_few_records.csv
TestFiles/evaporation/: durham_evap.csv  falls_lake_evap.csv  jordan_lake_evap.csv  little_river_raleigh_evap.csv  owasa_evap.csv  wb_evap.csv
TestFiles/evaporation_few_records/: jordan_lake_evap_few_records.csv  little_river_raleigh_evap_few_records.csv  owasa_evap_few_records.csv  (+1 more)
Tests/: Tests.cpp  catch.hpp  test_input_file.wp  test_input_file_borg.wp  test_input_file_dv_file.wp  test_input_file_gen_tables.wp  test_input_file_incomplete_non_existing_ws.wp  test_input_file_missing_name.wp  test_input_file_no_testfiles.wp  test_input_file_open_dvs.wp  test_input_file_solution_file.wp
Utils/: Constants.h  image_tag.sh  persist-env.sh  singularity-build-common.sh
diagnostic_output/: DVs_rank_1.csv  DVs_rank_10.csv  DVs_rank_100.csv  DVs_rank_101.csv  DVs_rank_102.csv  DVs_rank_103.csv  DVs_rank_104.csv  DVs_rank_105.csv  DVs_rank_106.csv  DVs_rank_107.csv  DVs_rank_108.csv  DVs_rank_109.csv  DVs_rank_11.csv  DVs_rank_110.csv  DVs_rank_111.csv  DVs_rank_112.csv  DVs_rank_113.csv  DVs_rank_114.csv  DVs_rank_115.csv  DVs_rank_116.csv  DVs_rank_117.csv  DVs_rank_118.csv  DVs_rank_119.csv  DVs_rank_12.csv  DVs_rank_120.csv  DVs_rank_121.csv  DVs_rank_122.csv  DVs_rank_123.csv  DVs_rank_124.csv  DVs_rank_125.csv  DVs_rank_126.csv  DVs_rank_127.csv  DVs_rank_128.csv  DVs_rank_129.csv  DVs_rank_13.csv  DVs_rank_130.csv  DVs_rank_131.csv  DVs_rank_132.csv  DVs_rank_133.csv  DVs_rank_134.csv  (+215 more)
error/: borgms_run_hybrid.err
memcheck_profiling/: callgrind.out.6495
memcheck_results/: TriangleModel.cfg
nix/: borg.nix  default.nix  remora.nix  shell.nix
output/: NC_output_MM_S0_N500.set  NC_runtime_MM_S0_N500.runtime  borgms_run_hybrid.out
rof_tables_cac/: tables_r0_u0  tables_r0_u1  tables_r0_u2  tables_r0_u3  tables_r10_u0  tables_r10_u1  tables_r10_u2  tables_r10_u3  tables_r11_u0  tables_r11_u1  tables_r11_u2  tables_r11_u3  tables_r12_u0  tables_r12_u1  tables_r12_u2  tables_r12_u3  tables_r13_u0  tables_r13_u1  tables_r13_u2  tables_r13_u3  tables_r14_u0  tables_r14_u1  tables_r14_u2  tables_r14_u3  tables_r15_u0  tables_r15_u1  tables_r15_u2  tables_r15_u3  tables_r16_u0  tables_r16_u1  tables_r16_u2  tables_r16_u3  tables_r17_u0  tables_r17_u1  tables_r17_u2  tables_r17_u3  tables_r18_u0  tables_r18_u1  tables_r18_u2  tables_r18_u3  (+220 more)
src/: Aux.cpp  Catchment.cpp  Catchment.h  Constants.h  ContinuityModel.cpp  ContinuityModel.h  DataColector.cpp  DataColector.h  Makefile  Simulation.cpp  Simulation.h  Utility.cpp  Utility.h  main.cpp
(+2294 files in other folders)
